fixed about overflow on chrome

--- a/style2.css
+++ b/style2.css
@@ -51,7 +51,6 @@
 .intro {
     background-color: #c8c9ca;
     padding: 10vh 20vw 2vh 20vw;
-    height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
